# energy-based-neural-sheaf-diffusion

./: .gitignore  LICENSE  README.md  exec.py  pyproject.toml
.gitlab/issue_templates/: bug_fix.md  feature_request.md
cbsd/: __init__.py  config.py
cbsd/data/: transforms.py  utils.py
cbsd/utils/: callbacks.py  logging.py
config/: exec.yaml
config/data/: actor.yaml  chameleon.yaml  citeseer.yaml  cora.yaml  cornell.yaml  pubmed.yaml  squirrel.yaml  texas.yaml  wisconsin.yaml
config/exp/: bundle-nsd_cora.yaml  bundle-nsd_texas.yaml  diag-nsd_cora.yaml  diag-nsd_cornell.yaml  diag-nsd_texas.yaml  e-nsd_texas.yaml  energy-gcn_cora.yaml  energy-gcn_texas.yaml  ensd_citeseer.yaml  ensd_cora.yaml  ensd_cornell.yaml  ensd_wisconsin.yaml  eps_pretraining_chameleon.yaml  eps_pretraining_citeseer.yaml  eps_pretraining_cora.yaml  eps_pretraining_cornell.yaml  eps_pretraining_pubmed.yaml  eps_pretraining_texas.yaml  eps_pretraining_wisconsin.yaml  filter-model-best_hparam2_texas.yaml  filter-model-best_hparam3_texas.yaml  filter-model-final_cora.yaml  filter-model_cora.yaml  filter-model_hparamsearch_texas.yaml  filter-model_wisconsin.yaml  gat.yaml  gcn-res3_augmented.yaml  gcn-scaled_adjacency.yaml  gcn.yaml  gcn_chameleon.yaml  gcn_squirrel.yaml  gcn_texas.yaml  gcn_wisconsin.yaml  gen-nsd_cora.yaml  graphsage.yaml  mlp_actor.yaml  pretraining_citeseer.yaml  pretraining_cora.yaml  pretraining_cornell.yaml  (+8 more)
notebooks/: ConsistentSheaf.ipynb  RestrictionMapsOptimization.ipynb  SaveResults.ipynb  TestTransform.ipynb  VisualizeEnergies.ipynb  VisualizeResults.ipynb
(+37 files in other folders)
